--- a/tests/language/working-base/045-expr-in-array.xml
+++ b/tests/language/working-base/045-expr-in-array.xml
@@ -4,11 +4,11 @@
   <variable name="subjectNo" type="int[]" xsi:nil="true"/>
   <variable name="trialTypes" type="int[]" xsi:nil="true"/>
   <variable name="outputs" type="int[]" xsi:nil="true"/>
-  <foreach var="t"  indexVar="j">
+  <foreach var="t"  indexVar="j" src="line 8">
   <in><variableReference>subjectNo</variableReference></in>
-  <body><foreach var="s"  indexVar="i">
+  <body><foreach var="s"  indexVar="i" src="line 9">
     <in><variableReference>trialTypes</variableReference></in>
-    <body><assign>
+    <body><assign src="line 11">
        <arraySubscript>
         <variableReference>outputs</variableReference>
         <arith op="*">
