--- a/tests/language/working-base/008-foreach.xml
+++ b/tests/language/working-base/008-foreach.xml
@@ -2,9 +2,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="sa" type="int[]" xsi:nil="true"/>
-  <foreach var="s" >
+  <foreach var="s"  src="line 2">
   <in><variableReference>sa</variableReference></in>
-  <body><call proc="echo">
+  <body><call proc="echo" src="line 2">
       <input><variableReference>s</variableReference></input>
     </call></body>
   </foreach>
