--- a/tests/language/working-base/010-foreach-array.xml
+++ b/tests/language/working-base/010-foreach-array.xml
@@ -3,9 +3,9 @@
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="fa" type="int[]" xsi:nil="true"/>
   <variable name="sa" type="int[]" xsi:nil="true"/>
-  <foreach var="s"  indexVar="i">
+  <foreach var="s"  indexVar="i" src="line 3">
   <in><variableReference>sa</variableReference></in>
-  <body><call proc="echo">
+  <body><call proc="echo" src="line 3">
       <output><arraySubscript>
        <variableReference>fa</variableReference>
        <variableReference>i</variableReference>
