--- a/tests/language/working-base/012-foreach.xml
+++ b/tests/language/working-base/012-foreach.xml
@@ -2,10 +2,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="sa" type="int[]" xsi:nil="true"/>
-  <foreach var="s" >
+  <foreach var="s"  src="line 2">
   <in><variableReference>sa</variableReference></in>
   <body><variable name="a" type="int" xsi:nil="true"/>
-    <call proc="echo">
+    <call proc="echo" src="line 2">
       <output><variableReference>a</variableReference></output>
       <input><variableReference>s</variableReference></input>
     </call></body>
