--- a/tests/language/working-base/0200001-function-invocation-no-param.xml
+++ b/tests/language/working-base/0200001-function-invocation-no-param.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="i" type="int" xsi:nil="true"/>
-  <assign>
+  <assign src="line 3">
    <variableReference>i</variableReference>
    <function name="myfunction">
    </function>
