--- a/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
+++ b/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="hw1" type="int" xsi:nil="true"/>
-  <call proc="echo">
+  <call proc="echo" src="line 1">
     <output><variableReference>hw1</variableReference></output>
   </call>
 </program>
