--- a/tests/language/working-base/procedurecall-assign-1.xml
+++ b/tests/language/working-base/procedurecall-assign-1.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="i" type="int" xsi:nil="true"/>
-  <call proc="f">
+  <call proc="f" src="line 1">
     <output><variableReference>i</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
   </call>
