--- a/tests/language/working-base/q21.xml
+++ b/tests/language/working-base/q21.xml
@@ -35,10 +35,10 @@
   <dataset name="french" type="messagefile">
     <file name="francais2.txt"/>
   </dataset>
-  <call proc="greeting">
+  <call proc="greeting" src="line 12">
     <output><variableReference>english</variableReference></output>
   </call>
-  <call proc="greeting">
+  <call proc="greeting" src="line 13">
     <output><variableReference>french</variableReference></output>
     <input bind="s"><stringConstant>bonjour</stringConstant></input>
   </call>
