--- a/tests/language/working-base/q3.xml
+++ b/tests/language/working-base/q3.xml
@@ -30,7 +30,7 @@
     </binding>
   </procedure>
   <variable name="hw" type="file" xsi:nil="true"/>
-  <call proc="echo">
+  <call proc="echo" src="line 9">
     <output><variableReference>hw</variableReference></output>
   </call>
 </program>
