--- a/tests/language/working-base/range.xml
+++ b/tests/language/working-base/range.xml
@@ -8,9 +8,9 @@
       <integerConstant>2</integerConstant>
     </range>
   </variable>
-  <foreach var="num" >
+  <foreach var="num"  src="line 3">
   <in><variableReference>nums</variableReference></in>
-  <body><call proc="print">
+  <body><call proc="print" src="line 4">
       <input><variableReference>num</variableReference></input>
     </call></body>
   </foreach>
