--- a/tests/language/working-base/x.xml
+++ b/tests/language/working-base/x.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
   <variable name="foo" type="int" xsi:nil="true"/>
-  <call proc="q">
+  <call proc="q" src="line 1">
     <output><variableReference>foo</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
   </call>
