--- a/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,13 @@
+(02/28/2008)
+
+*** The previous axis update had a bug with the UUID generator.
+    This update fixes that.
+
+(02/25/2008)
+
+*** Updated axis and wsrf jars to fix a scalability problem
+    with notifications.
+
 (02/11/2008)
 
 *** Updated gram jars to 4.0.6 plus a scalability patch.
