Store kickstart records in a subdirectory with the same base name as is used for log files.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1693 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/28/08)
+*** Store kickstart records in a subdirectory with the same base name as
+    is used for log files.
+
 (02/27/08)
 *** SwiftScript source file line numbers are now passed deeper into the
     compiler in order to give location information in more error messages.
