Progress ticker on stderr every 10..60 seconds
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1695 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,6 @@
 (02/28/08)
+*** Progress ticker on stderr every 10..60 seconds
+
 *** Store kickstart records in a subdirectory with the same base name as
     is used for log files.
 
