added host_types support
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1934 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,7 @@
+(03/06/2008)
+
+*** Added support for host_types attribute (patch from benc)
+
 (02/28/2008)
 
 *** The previous axis update had a bug with the UUID generator.
